# velarixdb

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  compaction_algo.txt  garbage_collection.txt  learnings.txt  main  main.rs  read_algo.txt  rustfmt.toml  sst  write_algo.txt
.github/workflows/: clippy.yml  codecov.yml  rust.yml
bench/: benchmark.rs
bump/buckets/bucket0543f0cf-4b3e-4c5f-a21b-2689ae646fee/: sstable_1708534196685_.db  sstable_1708534198424_.db
bump/buckets/bucket1049efdb-6b0d-4055-8237-65283dc15957/: sstable_1709223689035_.db
bump/buckets/bucket1befa732-cb80-45dc-b47b-780f0ebe8a26/: sstable_1709223687409_.db  sstable_1709223687415_.db  sstable_1709223687421_.db
bump/buckets/bucket1c51eb31-7f37-4800-8f53-dd150968159f/: sstable_1708531871489_.db
bump/buckets/bucket2a315ce2-15b3-4aa7-ac75-b9116aa34c3f/: sstable_1708531869346_.db
bump/buckets/bucket402f768c-f436-421d-a537-74680867e79a/: sstable_1709223689031_.db  sstable_1709223689244_.db  sstable_1709223689443_.db
bump/buckets/bucket405937ea-662c-4e5d-860c-d9c9d04fc7f4/: sstable_1708470361462_.db  sstable_1708470361529_.db  sstable_1708470361595_.db
bump/buckets/bucket49fb62e2-751c-4100-926f-8d451a73f607/: sstable_1708470361607_.db
bump/buckets/bucketab25760d-009d-4272-8ea7-763e0a17f90e/: sstable_1708531871254_.db
bump/buckets/bucketc59c1a8a-3125-4381-8b8d-e207561e1ed2/: sstable_1708534198061_.db  sstable_1708534198420_.db
examples/: delete.rs  get.rs  get_concurrent.rs  json.rs  put.rs  put_concurrent.rs  update.rs
src/: lib.rs
src/background/: background.rs  background_job.rs  mod.rs
src/block/: block.rs  block_manager.rs  cache.rs  mod.rs
src/bloom_filter/: bf.rs  mod.rs
src/bucket/: bucket.rs  bucket_manager.rs  mod.rs
src/bucket_coordinator/: bucket_coordinator.rs  mod.rs
src/buffer/: mod.rs
src/cfg/: config.rs  mod.rs
src/compact/: compact.rs  insertor.rs  sized.rs
src/compaction/: bucket_coordinator.rs  bucket_corrdinator.rs  compactor.rs  compator.rs  level_compaction.rs  mod.rs
src/compactors/: compact.rs  insertor.rs  leveled_compactor.rs  mod.rs  size_tier_compactor.rs  sized.rs
src/consts/: mod.rs
src/db/: keyspace.rs  mod.rs  recovery.rs  store.rs
src/err/: mod.rs
src/filter/: bf.rs  mod.rs
src/flush/: flusher.rs  mod.rs
src/flusher/: flusher.rs  mod.rs
src/fs/: mod.rs
src/garbage_collector/: example.txt  gc.rs  gc2.rs  mod.rs
src/gc/: garbage_collector.rs  gc.rs  mod.rs
src/helpers/: mod.rs
src/index/: index.rs  indexer.rs  mod.rs
src/key_offseter/: key_offseter.rs  mod.rs
src/key_range/: mod.rs  range.rs
src/macro/: mod.rs
src/macros/: mod.rs
src/mem/: memtable.rs  mod.rs
src/memtable/: inmemory.rs  mem.rs  memtable.rs  mod.rs  val_option.rs
src/meta/: meta.rs  meta_manager.rs  mod.rs
src/range/: mod.rs  range.rs  range_iterator.rs  range_queries.rs
src/sparse_index/: mod.rs  sparse_index.rs
src/sst/: mod.rs  table.rs
src/sstable/: mod.rs  sst.rs
src/storage/: mod.rs  recover.rs  storage.rs
src/storage_engine/: mod.rs  storage.rs
src/tests/: bucket_test.rs  gc_test.rs  key_range_test.rs  meta_test.rs  mod.rs  sized_tier_test.rs  store_test.rs  summary_test.rs  vlog.rs  workload.rs
src/transaction/: transaction.rs
src/types/: mod.rs
src/util/: mod.rs
src/utils/: mod.rs
src/value_log/: mod.rs  v_log.rs
src/vikings/: mod.rs
src/vlog/: mod.rs  v_log.rs
tests/: delete.rs  get.rs  get_concurrent.rs  put_concurrent.rs  update.rs
v2/: Cargo.toml
v2/src/: block_cache.rs  either.rs  error.rs  file.rs  file_offsets.rs  footer.rs  key_range.rs  lib.rs  lsm_entry.rs  path.rs  range.rs  seqno.rs  serde.rs  stop_signal.rs  time.rs  value.rs  version.rs
v2/src/bloom/: bit_array.rs  mod.rs
v2/src/descriptor_table/: mod.rs
v2/src/memtable/: mod.rs
v2/src/sst/: id.rs  mod.rs  value_offset_block.rs  writer.rs
v2/src/sst/block/: header.rs  mod.rs
v2/src/sst/block_index/: block_handle.rs  mod.rs  top_level.rs  writer.rs
v2/src/sst/meta/: mod.rs  table_type.rs
v2/src/tree/: inner.rs
(+760 files in other folders)
