[package]
name = "vikingsdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bit-vec = "0.6.3"
chrono = "0.4.31"
crossbeam-epoch = "0.9.18"
crossbeam-skiplist = "0.1.3"
env_logger = "0.11.2"
futures = "0.3.30"
indexmap = "2.2.5"
libc = "0.2.153"
log = "0.4.21"
nix = "0.28.0"
num-traits = "0.2.17"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
skip-list = "0.1.3"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "0.8", features = ["serde", "v4"] }

[target.'cfg(target_os = "linux")']
