[package]
name = "velarixdb"
version = "0.1.0"
edition = "2021"
authors = ["Adewumi Sunkanmi D."]
description = "An LSM Storage Engine focused on reduced IO amplification"
keywords = ["velarixdb","database", "lsmt", "lsm", "rocksdb", "leveldb"]
categories = ["data-structures", "database-implementations", "algorithms"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.7.1"
async-trait = "0.1.80"
bit-vec = "0.6.3"
chrono = "0.4.31"
crossbeam = "0.8.4"
crossbeam-epoch = "0.9.18"
crossbeam-skiplist = "0.1.3"
env_logger = "0.11.2"
futures = "0.3.30"
indexmap = "2.2.5"
libc = "0.2.153"
log = "0.4.21"
mockall = "0.12.1"
nix = "0.28.0"
num-traits = "0.2.17"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
skip-list = "0.1.3"
tempfile = "3.10.1"
thiserror = "1.0.57"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[target.'cfg(target_os = "linux")']
