[package]
name = "v2"
version = "0.0.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1.3"
guardian = "1.1.0"
log = "0.4.22"
lz4_flex = "0.11.3"
nanoid = "0.4.0"
path-absolutize = "3.1.1"
quick_cache = "0.6.2"
seahash = "4.1.0"
tempfile = "3.10.1"
test-log = "0.2.16"
thiserror = "1.0.63"
